# LattPath

./: .gitignore  CMakeLists.txt  HSR_2023-24.sln  HSR_2023-24.vcxproj  HSR_2023-24.vcxproj.filters  HSR_2023_24.cpp  README.md
.github/workflows/: ci.yml
LatticeDstarPathplanning/: LatticeDstarPathplanning.vcxproj  README.md
LatticeDstarPathplanning/Debug/: LatticeDstarPathplanning.exe.recipe  LatticeDstarPathplanning.ilk  LatticeDstarPathplanning.vcxproj.FileListAbsolute.txt  vc143.idb
artifacts/: dense_suite_benchmark.json  downtown_plan.json  intersection_swap_cooperative_lattpath_simulation.json  intersection_swap_independent_astar_simulation.json  long_crossing_cooperative_lattpath_simulation.json  long_crossing_independent_astar_simulation.json  manhattan_cooperative_lattpath_simulation.json  manhattan_custom_cooperative_lattpath_simulation.json  manhattan_custom_independent_astar_simulation.json  manhattan_independent_astar_simulation.json  manhattan_midtown_agents.json  manhattan_midtown_osm_custom_agents.json  manhattan_midtown_osm_custom_controls.json  manhattan_midtown_osm_custom_grid.txt  manhattan_midtown_osm_custom_network.json  manhattan_midtown_osm_grid.txt  manhattan_midtown_osm_network.json  manhattan_midtown_osm_osmnx_agents.json  manhattan_midtown_osm_osmnx_controls.json  manhattan_midtown_osm_osmnx_grid.txt  manhattan_midtown_osm_osmnx_network.json  manhattan_osm_astar_plan.json  manhattan_osm_custom_astar_plan.json  manhattan_osm_custom_grid.txt  manhattan_osm_custom_lattpath_plan.json  manhattan_osm_custom_metadata.json  manhattan_osm_grid.txt  manhattan_osm_lattpath_plan.json  manhattan_osm_metadata.json  manhattan_osm_osmnx_astar_plan.json  manhattan_osm_osmnx_grid.txt  manhattan_osm_osmnx_lattpath_plan.json  manhattan_osm_osmnx_metadata.json  manhattan_osmnx_cooperative_lattpath_simulation.json  manhattan_osmnx_independent_astar_simulation.json  switchbacks_plan.json  warehouse_plan.json
configs/cities/: README.md  manhattan.json
configs/multi_agent/: intersection_swap.grid  intersection_swap_agents.json  long_crossing.grid  long_crossing_agents.json
docs/: algorithm.md  benchmarks.md  design.md
src/: main.cpp  planner.cpp
tests/: check_city_pipeline.py  check_multi_agent.py  planner_tests.cpp
tools/: build_city_osm.py  build_manhattan_osm.py  generate_city_backend_comparison.sh  generate_city_demo.sh  generate_manhattan_demo.sh  generate_multi_agent_demos.py  render_benchmark_video.py  render_city_race.py  render_manhattan_race.py  simulate_city_agents.py  simulate_manhattan_agents.py  visualize_plan.py
visualizer/: demo-plan.js  index.html  manhattan.html  multi-agent.html
(+31 files in other folders)
